--- a/www/style.css
+++ b/www/style.css
@@ -1,8 +1,12 @@
 * {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+html {
+  height: 100%;
+}
 body {
-  height: 100vh;
+  margin: 0;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,11 +17,6 @@ body {
   /* background: rgb(245, 245, 245); */
   border-radius: 5px;
   width: 400px;
-}
-@media screen and (max-width: 400px) {
-  #directory {
-    width: 100%;
-  }
 }
 h1 {
   margin: 0
@@ -55,4 +54,27 @@ a:hover {
 a:hover:after {
   text-decoration: none !important;
   transform: translate(3px)
+}
+iframe {
+  width: 100%;
+  height: 100%;
+}
+#error {
+  width: 400px;
+  position: absolute;
+  top: 0px;
+  color: maroon;
+  background: #f5f5f5;
+  padding: .8em 0;
+  text-align: center;
+  border-radius: 0 0 5px 5px;
+  border: 1px solid lightgrey;
+}
+@media screen and (max-width: 400px) {
+  #directory {
+    width: 100%;
+  }
+  #error {
+    width: 100%;
+  }
 }
