--- a/www/style.css
+++ b/www/style.css
@@ -1,25 +1,31 @@
 * {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
 }
 html {
   height: 100%;
 }
 body {
   margin: 0;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 #directory {
   padding: 1em;
-  /* background: rgb(245, 245, 245); */
   border-radius: 5px;
-  width: 400px;
+  width: 450px;
 }
-h1 {
+h1, h2 {
   margin: 0
+}
+h2 {
+  font-size: 1.3em;
+}
+span {
+  color: grey;
 }
 ul {
   padding: 0;
@@ -39,7 +45,7 @@ a {
   transition: all .2s;
   box-shadow: none;
 }
-a:after {
+h2:after {
   content: "\279C";
   margin-left: 3px;
   transform: translate(0px);
@@ -47,34 +53,20 @@ a:after {
   transition: all .2s;
 }
 a:hover {
-  text-decoration: underline;
   border-color: grey;
   box-shadow: 2px 2px grey;
 }
-a:hover:after {
+a:hover h2 {
+  text-decoration: underline;
+}
+a:hover h2:after {
   text-decoration: none !important;
   transform: translate(3px)
 }
-iframe {
-  width: 100%;
-  height: 100%;
-}
-#error {
-  width: 400px;
-  position: absolute;
-  top: 0px;
-  color: maroon;
-  background: #f5f5f5;
-  padding: .8em 0;
-  text-align: center;
-  border-radius: 0 0 5px 5px;
-  border: 1px solid lightgrey;
-}
-@media screen and (max-width: 400px) {
+
+@media screen and (max-width: 450px) {
   #directory {
     width: 100%;
-  }
-  #error {
-    width: 100%;
+    padding: 1em;
   }
 }
